--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1366,18 +1366,30 @@ img-right {
 .modal--active {
   visibility: visible;
 }
+
+.modal__border {
+	border-radius: 25px;
+    border: 5px solid #006633;
+	 height: 600px;
+  width: 600px;
+	
+}
+
+
 .modal__window {
-  -webkit-backface-visibility: hidden;
+	border-radius: 30px 0px 0px 30px;
+    border: 5px solid #006633;
+	-webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
   background: #f5f5f5;
   height: auto;
-  left: 50%;
-  max-height: 90%;
+max-height: 90%;
   max-width: 600px;
   min-height: 300px;
+  left: 50%;
   opacity: 0;
   overflow-y: auto;
   position: fixed;
@@ -1394,6 +1406,7 @@ img-right {
   transition: all .5s ease;
   width: 100%;
   z-index: 1001;
+
 }
 .modal--active .modal__window {
   opacity: 1;
@@ -1486,12 +1499,13 @@ img-right {
   padding: 5px 20px 0 20px;
   text-align:justify;
 }
+
 .modal__overlay {
   background: #000;
   height: 100%;
   left: 0;
   opacity: 0;
-  position: fixed;
+  position:fixed;
   top: 0;
   -webkit-transition: all .5s ease;
   -moz-transition: all .5s ease;
@@ -1536,6 +1550,17 @@ img-right {
   
 }
 
-
+.boxshadow 
+{
+  -moz-box-shadow: 3px 3px 5px #535353;
+  -webkit-box-shadow: 3px 3px 5px #535353;       
+  box-shadow: 3px 3px 5px #535353;
+}
+.roundbox
+{  
+  -moz-border-radius: 6px 6px 6px 6px;
+  -webkit-border-radius: 6px;  
+  border-radius: 6px 6px 6px 6px;
+}
 
 
